--- a/styles/global.css
+++ b/styles/global.css
@@ -15,4 +15,20 @@
     --shape-transparency: hsl(0, 0%, 56%);
     --text-color-primary: #313131;
     --text-color-secondary: #6C6C6C;
+
+    --font-family: 'Poppins', sans-serif;
+    --text: 16px/1.5 var(--font-family);
+    --text-lg: bold 32px/1.5 var(--font-family);
+    --text-sm: 14px/170% var(--font-family);
+}
+
+body {
+    background-color: var(--background-color);
+    color: var(--text-color-primary);
+    font: var(--text);
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
