--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,27 @@
-header .container {
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px 0;
+    margin-block: 20px;
+}
+
+.navbar {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+}
+
+.navbar .search {
+    width: 25px;
+}
+
+.navbar a {
+    text-decoration: none;
+    color: #6C6C6C;
+    font-size: 1rem;
+}
+
+.navbar .profile {
+    width: 40px;
+    border-radius: 100%;
 }
