--- a/styles/index.css
+++ b/styles/index.css
@@ -1,9 +1,5 @@
-@import url(global.css);
-@import url(header.css);
-@import url(footer.css);
-@import url(main.css);
-@import url(nav.css);
-
-header {
-    background-color: bisque;
-}
+@import url(../styles/global.css);
+@import url(../styles/footer.css);
+@import url(../styles/header.css);
+@import url(../styles/layout.css);
+@import url(../styles/main.css);
