--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,10 @@
-@import url(../styles/global.css);
-@import url(../styles/footer.css);
-@import url(../styles/header.css);
-@import url(../styles/layout.css);
-@import url(../styles/main.css);
+@import url('global/global.css');
+
+@import url('header/nav.css');
+@import url('header/global.css');
+@import url('header/about.css');
+
+@import url('main/gallery.css');
+
+@import url('footer/global.css');
+@import url('footer/menu.css');
